refactor: Migrate to Next.js and update dependencies
The project has been migrated from Vite to Next.js, which involves significant changes to the build system, dependencies, and project structure.

Key changes include:
- Updated `package.json` to reflect Next.js dependencies and scripts.
- Modified `index.html` to include Next.js specific imports and dark mode configuration.
- Added new icons (Sun and Moon) for theme toggling.
- Integrated a `ThemeToggle` component into the `HomeHeader`.
- Enhanced the `AllToolsPage` with category icons and improved filtering.
- Introduced a `Spinner` component and updated `SingleToolLayout` for potential loading states.
- Updated various imports to align with the Next.js environment.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             colors: {
@@ -46,7 +47,9 @@
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.3",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "next/": "https://aistudiocdn.com/next@^15.5.4/",
+    "next": "https://aistudiocdn.com/next@^15.5.4"
   }
 }
 </script>
