--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 'float-delay-1': 'float 7s ease-in-out infinite 0.5s',
                 'float-delay-2': 'float 8s ease-in-out infinite 1s',
                 'shake': 'shake 0.5s ease-in-out',
+                'fade-in': 'fadeIn 0.3s ease-in-out',
             },
             keyframes: {
               float: {
@@ -42,6 +43,10 @@
                 '20%, 80%': { transform: 'translate3d(2px, 0, 0)' },
                 '30%, 50%, 70%': { transform: 'translate3d(-4px, 0, 0)' },
                 '40%, 60%': { transform: 'translate3d(4px, 0, 0)' },
+              },
+              fadeIn: {
+                '0%': { opacity: '0' },
+                '100%': { opacity: '1' },
               }
             }
           },
@@ -63,6 +68,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@zxing/browser@0.1.5/umd/zxing-browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@4.4.168/build/pdf.min.mjs" type="module"></script>
 </head>
   <body class="bg-light dark:bg-slate-900">
     <div id="root"></div>
